# agent_fund

./: .gitignore  Dockerfile  README.md  alembic.ini  create_dirs.sh  docker-compose.yml  example.env  fund_abi.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 63888f9f6826_initial_migration.py  7b6b8136e7e2_add_sentiment_analysis_fields.py  e44261fd069d_init_models.py
app/: main.py  types.py
app/agents/: discord_bot.py  main.py  manager.py  sentiment_analyzer.py
contracts/: README.md
contracts/broadcast/Fund.s.sol/42220/: run-1743759615.json  run-1743760165.json
contracts/script/: Fund.s.sol
contracts/src/: Fund.sol
contracts/test/: Fund.t.sol
contracts/test/mocks/: MockERC20.sol
db/: main.py  models.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  debug-contract.js  index.js
frontend/src/api/: api.js  web3.js
frontend/src/components/: Layout.js
frontend/src/pages/: Dashboard.js  Fund.js  Messages.js  Protocols.js  Users.js
scripts/: create_initial_migration.py
