[project]
name = "ai-manager"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pm", email = "misirov@pablos-MacBook-Air.local" }
]
dependencies = [
    "openai>=1.69.0",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "langgraph>=0.3.21",
    "sqlalchemy>=2.0.40",
    "alembic>=1.15.2",
    "psycopg2-binary>=2.9.10",
    "discord-py>=2.5.2",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "discord>=2.3.2",
    "web3>=7.10.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_manager"]
